--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title><B>Ak Videography</B></title>
+		<title>Ak Videography</title>
 	</head>
 	<body>
+		<h1><B>Ak Videography</B></h1>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
