--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Ak Videography</title>
 	</head>
 	<body>
-		<h1><B>Ak Videography</B></h1>
+		<h1><B><MARQUEE>Ak Videography</MARQUEE></B></h1>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
@@ -15,14 +15,14 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
+        		<h1>Hi there, I'm Akshay Kedar!</h1>
 				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:iamakshay180601@gmail.com">email</a></li>
+        		<li><a href="https://github.com/sohambade112002">github.com/hankquinlan</a></li>
 			</ul>
 		</footer>
 	</body>
