--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Ak Videography</title>
 	</head>
 	<body>
-		<h1><B><MARQUEE>Ak Videography</MARQUEE></B></h1>
+		<h1><U><I><B><MARQUEE>Ak Videography</MARQUEE></B></U></I></h1>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
