--- a/index.html
+++ b/index.html
@@ -1,29 +1,9 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Ak Videography</title>
-	</head>
-	<body>
-		<h1><U><I><B><MARQUEE>Ak Videography</MARQUEE></B></U></I></h1>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Akshay Kedar!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:iamakshay180601@gmail.com">email</a></li>
-        		<li><a href="https://github.com/sohambade112002">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+<head>
+	<title>Hello Visiter!</title>
+</head>
+<body>
+<h1>Hello Visiter!</h1>
+</body>
+</html>	
