--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 	<header>
-		<nav id="header-nav" class="navbar navbar-default">
+		<nav id="header-nav" class="navbar">
 			<div class="container">	
-				
+
 			</div>
 			
 		</nav>
 	</header>
 	
-</body> 
+</body>
 </html>
