--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="urf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Ak Videography</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/styles.css">
+	<title>AK Videography</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-	<header>
-		<nav id="header-nav" class="navbar">
-			<div class="container">	
-
-			</div>
-			
-		</nav>
-	</header>
-	
+	<div id="main">
+		<nav>
+			<img src="C:\Users\Admin\Desktop\akshay\PicsArt_06-13-03.39.58.jpg" width="200" height="80">
+			<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Gallery</a></li>
+			<li><a href="#">Portfolio</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	</nav>
+</div>
 </body>
 </html>
