--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 <body>
 	<div id="main">
 		<nav>
-			<img src="C:\Users\Admin\Desktop\akshay\PicsArt_06-13-03.39.58.jpg" width="200" height="80">
+			<img src="http://i.xp.io/Aauafnd.jpg" width="200" height="80">
 			<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Gallery</a></li>
-			<li><a href="#">Portfolio</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Contact</a></li>
-		</ul>
-	</nav>
-</div>
+			   <li><a href="#">Home</a></li>
+			   <li><a href="#">Gallery</a></li>
+			   <li><a href="#">Portfolio</a></li>
+			   <li><a href="#">About</a></li>
+			   <li><a href="#">Contact</a></li>
+		        </ul>
+	       </nav>
+        </div>
 </body>
 </html>
