--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			   <li><a href="#">Home</a></li>
 			   <li><a href="#">Gallery</a></li>
 			   <li><a href="#">Portfolio</a></li>
-			   <li><a href="#">About</a></li>
+			   <li><a href="https://www.instagram.com/ask_kd_/" target="_blank" title="follow me!">About</a></li>
 			   <li><a href="#">Contact</a></li>
 		        </ul>
 	       </nav>
