--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<nav>
 			<img src="http://i.xp.io/Aauafnd.jpg" width="300" height="300">
 			<ul>
-			   <li><a href="#">Home</a></li>
+			   <li><a href="https://soham112002.github.io/">Home</a></li>
 			   <li><a href="#">Gallery</a></li>
 			   <li><a href="#">Portfolio</a></li>
 			   <li><a href="https://www.instagram.com/ask_kd_/" target="_blank" title="follow me!">About</a></li>
