--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>AK Videography</title>
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<title>Social media icons using font awesome</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-	<div id="main">
-		<nav>
-			<img src="http://i.xp.io/Aauafnd.jpg" width="300" height="300">
+	<div class="wrapper">
+		<h1>Socialize</h1>
+		<p>Social Media Icons With Font Awesome</p>
+		<div class="media">
 			<ul>
-			   <li><a href="https://soham112002.github.io/">Home</a></li>
-			   <li><a href="#">Gallery</a></li>
-			   <li><a href="#">Portfolio</a></li>
-			   <li><a href="https://www.instagram.com/ask_kd_/" target="_blank" title="follow me!">About</a></li>
-			   <li><a href="#">Contact</a></li>
-		        </ul>
-	       </nav>
-        </div>
+			<li></li>
+			<li></li>
+			<li></li>
+
+            </ul>	
+		</div>
+	</div>
 </body>
 </html>
