--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 		<p>Social Media Icons With Font Awesome</p>
 		<div class="media">
 			<ul>
-			<li></li>
-			<li></li>
-			<li></li>
+			<li><i class="fab fa-youtube"></i></li>
+			<li><i class="fab fa-facebook"></i></li>
+			<li><i class="fab fa-instagram"></i></li>
 
-            </ul>	
+
+                        </ul>	
 		</div>
 	</div>
 </body>
