--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<p>Social Media Icons With Font Awesome</p>
 		<div class="media">
 			<ul>
-			<li><i class="fab fa-youtube"></i></li>
-			<li><i class="fab fa-facebook"></i></li>
-			<li><i class="fab fa-instagram"></i></li>
+			<li><i class="fa fa-youtube"></i></li>
+			<li><i class="fa fa-facebook"></i></li>
+			<li><i class="fa fa-instagram"></i></li>
 
 
                         </ul>	
