--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Social media icons using font awesome</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
 </head>
 <body>
 	<div class="wrapper">
@@ -13,7 +13,7 @@
 			<ul>
 			<li><i class="fa fa-youtube"></i></li>
 			<li><i class="fa fa-facebook"></i></li>
-			<li><i class="fa fa-instagram"></i></li>
+			<li><i class="fa fa-instagram" id="insta" aria-hidden="true"></i></li>
 
 
                         </ul>	
