--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<ul>
 			<li><i class="fa fa-youtube"></i></li>
 			<li><i class="fa fa-facebook"></i></li>
-			<li><i class="fa fa-instagram" id="insta" aria-hidden="true"></i></li> 
+			<li><a href="https://www.instagram.com/ask_kd_/"><i class="fa fa-instagram" id="insta" aria-hidden="true"></i></a></li> 
 
 
             </ul>	
