--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<p>Social Media Icons With Font Awesome</p>
 		<div class="media">
 			<ul>
-			<li><a href="https://l.instagram.com/?u=https%3A%2F%2Fyoutu.be%2FodagUiQwsw8&e=ATMHrHbHUhkDUQAaChtyid1vpfiDNh14gUGaUXiOdGBknB5X_dMUucjsxW_oxX4327qJHpPgyo0bEmrvh95zrHLxTH66Vezc&s=1"><i class="fa fa-youtube" id="insta" aria-hidden="true"></i></a></li>
-			<li><i class="fa fa-facebook" id="insta" aria-hidden="true"></i></li>
+			<li><a href="https://www.youtube.com/channel/UCiLSNYZLGhYAkfYlbTup58Q" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+			<li><i class="fa fa-facebook"  aria-hidden="true"></i></li>
 			<li><a href="https://www.instagram.com/ask_kd_/" target="_blank"><i class="fa fa-instagram" id="insta" aria-hidden="true"></i></a></li> 
 
 
