--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>	
 		</div>
 	</div>
-	<div id="main">
+	<div class="main">
 		<nav>
 			<img src="http://i.xp.io/Aauafnd.jpg" width="300" height="300">
 			<ul>
