--- a/index.html
+++ b/index.html
@@ -19,5 +19,17 @@
             </ul>	
 		</div>
 	</div>
+	<section id="main">
+		<nav>
+			<img src="http://i.xp.io/Bhq8VAP.jpg" width="300" height="300">
+			<ul class="navi">
+			   <li><a href="">Home</a></li>
+			   <li><a href="#">Gallery</a></li>
+			   <li><a href="#">Portfolio</a></li>
+			   <li><a href="#">About</a></li>
+			   <li><a href="#">Contact</a></li>
+		    </ul>
+	    </nav>
+    </section>
 </body>
 </html>
