--- a/index.html
+++ b/index.html
@@ -1,28 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Social media icons using font awesome</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+	<title>AK Videography</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-	<div class="wrapper">
-		<h1>Socialize</h1>
-		<p>Social Media Icons With Font Awesome</p>
-		<div class="media">
-			<ul>
-			    <li><a href="https://www.youtube.com/channel/UCiLSNYZLGhYAkfYlbTup58Q" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-			    <li><i class="fa fa-facebook"  aria-hidden="true"></i></li>
-			    <li><a href="https://www.instagram.com/ask_kd_/" target="_blank"><i class="fa fa-instagram" id="insta" aria-hidden="true"></i></a></li> 
-
-
-            </ul>	
-		</div>
-	</div>
 	<section id="main">
 		<nav>
 			<img src="http://i.xp.io/Bhq8VAP.jpg" width="300" height="300">
-			<ul class="navi">
+			<ul>
 			   <li><a href="">Home</a></li>
 			   <li><a href="#">Gallery</a></li>
 			   <li><a href="#">Portfolio</a></li>
@@ -32,4 +18,6 @@
 	    </nav>
     </section>
 </body>
-</html>
+
+
+
