--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
 		    </ul>
 	    </nav>
     </section>
+    <div class="wrapper">
+		<h1>Socialize</h1>
+		<p>Social Media Icons With Font Awesome</p>
+		<div class="media">
+			<ul>
+			    <li><a href="https://www.youtube.com/channel/UCiLSNYZLGhYAkfYlbTup58Q" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+			    <li><i class="fa fa-facebook"  aria-hidden="true"></i></li>
+			    <li><a href="https://www.instagram.com/ask_kd_/" target="_blank"><i class="fa fa-instagram" id="insta" aria-hidden="true"></i></a></li> 
+
+
+            </ul>	
+		</div>
+	</div>
 </body>
 
 
