--- a/index.html
+++ b/index.html
@@ -1,23 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>AK Videography</title>
+	<title>Social media icons using font awesome</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 </head>
 <body>
-	<section id="main">
-		<nav>
-			<img src="http://i.xp.io/Bhq8VAP.jpg" width="100" height="100">
-			<ul>
-			   <li><a href="">Home</a></li>
-			   <li><a href="#">Gallery</a></li>
-			   <li><a href="#">Portfolio</a></li>
-			   <li><a href="#">About</a></li>
-			   <li><a href="#">Contact</a></li>
-		    </ul>
-	    </nav>
-    </section>
-    <div class="wrapper">
+	<div class="wrapper">
 		<h1>Socialize</h1>
 		<p>Social Media Icons With Font Awesome</p>
 		<div class="media">
@@ -31,6 +20,4 @@
 		</div>
 	</div>
 </body>
-
-
-
+</html>
