--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	<div class="wrapper">
-		<h1>Socialize</h1>
-		<p>Social Media Icons With Font Awesome</p>
+		<h1>Akshay Kedar films</h1>
+		<p><marquee>Travel film maker/Content creater/Cinematographer</marquee></p>
 		<div class="media">
 			<ul>
 			    <li><a href="https://www.youtube.com/channel/UCiLSNYZLGhYAkfYlbTup58Q" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
