--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 </head>
-<body color="#000">
+<body>
 	<div class="wrapper">
 		<h1>Akshay Kedar films</h1>
-		<p><marquee>Travel film maker/Content creater/Cinematographer</marquee></p>
+		<p><marquee><font color="#000000">Travel film maker / Content creater / Cinematographer</font></marquee></p>
 		<div class="media">
 			<ul>
 			    <li><a href="https://www.youtube.com/channel/UCiLSNYZLGhYAkfYlbTup58Q" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
