--- a/index.html
+++ b/index.html
@@ -6,9 +6,21 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 </head>
 <body>
+	<section id="main">
+		<nav>
+			<img src="http://i.xp.io/Bhq8VAP.jpg" width="100" height="100">
+			<ul>
+			   <li><a href="">Home</a></li>
+			   <li><a href="#">Gallery</a></li>
+			   <li><a href="#">Portfolio</a></li>
+			   <li><a href="#">About</a></li>
+			   <li><a href="#">Contact</a></li>
+		    </ul>
+	    </nav>
+    </section>
 	<div class="wrapper">
-		<h1>Akshay Kedar films</h1>
-		<p><marquee><font color="#000000">Travel film maker / Content creater / Cinematographer</font></marquee></p>
+		<h1>Akshay kedar Films</h1>
+		<p><marquee><font color="#000000">Travel film maker / Content creator / Cinematographer</font></marquee></p>
 		<div class="media">
 			<ul>
 			    <li><a href="https://www.youtube.com/channel/UCiLSNYZLGhYAkfYlbTup58Q" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
