--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Social media icons using font awesome</title>
+	<title>Responsive web</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+
+
 </head>
 <body>
-	<nav>
-		<img src="http://i.xp.io/Bhq8VAP.jpg" width="100" height="100">
-		<ul>
-			<li><a href="">Home</a></li>
-			<li><a href="#">Gallery</a></li>
-			<li><a href="#">Portfolio</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Contact</a></li>
-		</ul>
-	</nav>
-	<div class="wrapper">
-		<h1>Akshay kedar Films</h1>
-		<p><marquee><font color="#000000">Travel film maker / Content creator / Cinematographer</font></marquee></p>
-		<div class="media">
+<div class="container">
+	<header>
+		<h2><a href="#">VIDEOGRAPHY</a></h2>
+		<nav>
 			<ul>
-			    <li><a href="https://www.youtube.com/channel/UCiLSNYZLGhYAkfYlbTup58Q" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-			    <li><i class="fa fa-facebook"  aria-hidden="true"></i></li>
-			    <li><a href="https://www.instagram.com/ask_kd_/" target="_blank"><i class="fa fa-instagram" id="insta" aria-hidden="true"></i></a></li> 
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Gallery</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Videos</a></li>
+				<li><a class="btn" href="#">Resister</a></li>
+			</ul>
+		</nav>
+	</header>
 
-
-            </ul>	
+	<div class="cover">
+		<h1>Akshay Kedar Films</h1>
+		<form>
+			<input type="search" name="" placeholder="where do you want to go">
+			<input type="submit" name="" value="search">
+		</form>
+		<div class="madeby">
+			<strong>Ak Creations</strong>
 		</div>
 	</div>
-</body>
+</div>	
+</body>	
 </html>
