--- a/index.html
+++ b/index.html
@@ -1,35 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-	<title>Social media icons using font awesome</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    <title>Ak Films</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width initial-scale=1">
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link rel="stylesheet" href="css/style.css">	
 </head>
 <body>
-	<nav>
-		<img src="http://i.xp.io/Bhq8VAP.jpg" width="100" height="100">
-		<ul>
-			<li><a href="">Home</a></li>
-			<li><a href="#">Gallery</a></li>
-			<li><a href="#">Portfolio</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Contact</a></li>
-		</ul>
-	</nav>
-	<div class="wrapper">
-		<h1>Akshay kedar Films</h1>
-		<p><marquee><font color="#000000">Travel film maker / Content creator / Cinematographer</font></marquee></p>
-		<div class="media">
-			<ul>
-			    <li><a href="https://www.youtube.com/channel/UCiLSNYZLGhYAkfYlbTup58Q" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-			    <li><i class="fa fa-facebook"  aria-hidden="true"></i></li>
-			    <li><a href="https://www.instagram.com/ask_kd_/" target="_blank"><i class="fa fa-instagram" id="insta" aria-hidden="true"></i></a></li> 
-
-
-            </ul>	
-		</div>
-	</div>
-</body>
-</html>
-
-
+	<nav class="navbar navbar-default navbar-fixed-top"
