--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@
 <link rel="stylesheet" href="css/style.css">	
 </head>
 <body>
-	<nav class="navbar navbar-default navbar-fixed-top"
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
