--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	</div>
 </div>
 
-<footer class="container text-center">
+<footer class="container">
     <div class="row">
     	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
     		<h3>Contact Us</h3>
@@ -68,7 +68,7 @@
     		<h4>Our address and contact info here</h4>
     	</div>
     	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-    		<img src="">
+    		<img src="https://pngtree.com/freebackground/black-minimalist-atmospheric-wooden-background_965794.html" width="100%" height="100%">
     	</div>
     </div>
 
