--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
 
 			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="section-2">	
+    		<img src="https://pngtree.com/freebackground/black-minimalist-atmospheric-wooden-background_965794.html" width="100%" height="100%">
 				
 			</div>
 		</div>
