--- a/index.html
+++ b/index.html
@@ -11,68 +11,25 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-	<div class="container">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+	<div class="container-fluid">
 		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data target="#navbar-items" >
-				<span class="sr-only">toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-		</div>
-		<img src="http://i.xp.io/Bhq8VAP.jpg" class="navbar-brand">
-		<div class="collapse navbar-collapse" id="navbar-items">
-        <ul class="nav navbar-nav navbar-right">
-        	<li><a href="">Home</a></li>
-			<li><a href="#">Gallery</a></li>
-			<li><a href="#">Portfolio</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Contact</a></li>
-		</ul>
-		</div>	
-	</div>	
-	</nav>
-
-<div class="padding">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="section-1">
-				<h1>Akshay kedar Films</h1>
-		        <p><marquee><font color="#000000">Travel film maker / Content creator / Cinematographer</font></marquee></p>
-				<div class="media">
-			        <ul>
-			        <li><a href="https://www.youtube.com/channel/UCiLSNYZLGhYAkfYlbTup58Q" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-			        <li><i class="fa fa-facebook"  aria-hidden="true"></i></li>
-			        <li><a href="https://www.instagram.com/ask_kd_/" target="_blank"><i class="fa fa-instagram" id="insta" aria-hidden="true"></i></a></li> 
-
-
-                    </ul>	
-		        </div>
-            </div>
-			
-
-
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="section-2">	
-    		<img src="https://pngtree.com/freebackground/black-minimalist-atmospheric-wooden-background_965794.html" width="100%" height="100%">
-				
-			</div>
-		</div>
-	</div>
-</div>
-
-<footer class="container">
-    <div class="row">
-    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-    		<h3>Contact Us</h3>
-    		<br>
-    		<h4>Our address and contact info here</h4>
-    	</div>
-    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-    		<img src="https://pngtree.com/freebackground/black-minimalist-atmospheric-wooden-background_965794.html" width="100%" height="100%">
-    	</div>
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#"><img src="http://i.xp.io/Bhq8VAP.jpg"></a>
     </div>
-
-</footer>
-</body>
-</html>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+      	<li><a href="#" class="active">Home</a></li>
+      	<li><a href="#">Gallery</a></li>
+		<li><a href="#">Portfolio</a></li>
+		<li><a href="#">About</a></li>
+		<li><a href="#">Contact</a></li>	
+	</ul>
+</div>
+</div>
+</nav>
